# DataNexus

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: _check_login.py  alembic.ini  create_superadmin.py  requirements-dev.txt  requirements.txt  test_pg_connection.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/ai/: chains.py  context_builder.py  embeddings.py  llm.py  prompts.py  retriever.py  vector_store.py
backend/app/api/: router.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/extraction/: base.py  chunker.py  csv_extractor.py  docx_extractor.py  excel_extractor.py  image_extractor.py  metadata.py  pdf_extractor.py  pipeline.py  pptx_extractor.py
backend/app/models/: __init__.py  chat.py  document_chunk.py  extracted_data.py  file.py  onedrive_token.py  report.py  task_log.py  team.py  user.py
backend/app/ppt/: charts.py  content_formatter.py  generator.py  image_gen.py  styles.py  templates.py
backend/app/schemas/: auth.py  chat.py  common.py  file.py  onedrive.py  report.py  search.py  team.py  user.py
backend/app/services/: auth_service.py  chat_service.py  file_service.py  report_service.py  search_service.py  tasks.py  team_service.py  user_service.py
backend/app/templates/: index.html  login.html
backend/app/utils/: encryption.py  file_utils.py  pagination.py  retry.py  validators.py
backend/tests/: conftest.py  test_auth.py  test_files.py
(+14 files in other folders)
